; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mscoree/extr_metahost.c_ICLRRuntimeInfo_GetRuntimeHost.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mscoree/extr_metahost.c_ICLRRuntimeInfo_GetRuntimeHost.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CLRRuntimeInfo = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@CLRRuntimeInfoVtbl = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ICLRRuntimeInfo_GetRuntimeHost(i32* %0, i32** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32**, align 8
  %5 = alloca %struct.CLRRuntimeInfo*, align 8
  store i32* %0, i32** %3, align 8
  store i32** %1, i32*** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.CLRRuntimeInfo* @impl_from_ICLRRuntimeInfo(i32* %6)
  store %struct.CLRRuntimeInfo* %7, %struct.CLRRuntimeInfo** %5, align 8
  %8 = load %struct.CLRRuntimeInfo*, %struct.CLRRuntimeInfo** %5, align 8
  %9 = getelementptr inbounds %struct.CLRRuntimeInfo, %struct.CLRRuntimeInfo* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = icmp eq i32* %11, @CLRRuntimeInfoVtbl
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load %struct.CLRRuntimeInfo*, %struct.CLRRuntimeInfo** %5, align 8
  %16 = load i32**, i32*** %4, align 8
  %17 = call i32 @CLRRuntimeInfo_GetRuntimeHost(%struct.CLRRuntimeInfo* %15, i32** %16)
  ret i32 %17
}

declare dso_local %struct.CLRRuntimeInfo* @impl_from_ICLRRuntimeInfo(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @CLRRuntimeInfo_GetRuntimeHost(%struct.CLRRuntimeInfo*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
